--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,8 +6,8 @@ Database:
    password: ""
 Features:
    ServerSpawn: true
-   SimpleChat: false
-   UsergroupChat: true
+   SimpleChat: true
+   UsergroupChat: false
    LobbyPlayer: true
    PlayerGreeting: true
    PlayerListText: true
