Implemented world holograms. Improved FeatureManager.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -20,4 +20,5 @@ Features:
    HiddenPaths: true
    MobManager: false
    DoubleJump: true
-   Lantern: true
+   Lantern: false
+   WorldHologram: true
