Impemented base database and profile managment.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,8 +6,8 @@ Database:
    password: ""
 Features:
    ServerSpawn: true
-   SimpleChat: true
-   UsergroupChat: false
+   SimpleChat: false
+   UsergroupChat: true
    LobbyPlayer: true
    PlayerGreeting: true
    PlayerListText: true
