Added custom menu manager and a test menu.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,7 @@ Database:
    username: root
    password: ""
 Features:
+   PlayerCompassMenu: true
    PlayerScoreboardTeams: true
    PlayerNewChecker: true
    PlayerOperator: true
