GameTipAnnouncer added. Various bug fixes.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,7 @@ Database:
    username: root
    password: ""
 Features:
+   GameTipAnnouncer: true
    PlayerCompassMenu: true
    PlayerScoreboardTeams: true
    PlayerNewChecker: true
