--- a/build.gradle
+++ b/build.gradle
@@ -121,6 +121,10 @@ dependencies {
     compile group: 'io.puharesource.mc', name: 'TitleManager', version: '2.0.0'
     compile "co.aikar:acf-paper:0.5.0-SNAPSHOT"
 
+    compile group: 'org.zeroturnaround', name: 'zt-zip', version: '1.11'
+    compile group: 'org.apache.ant', name: 'ant-commons-net', version: '1.10.0'
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+
     compileOnly 'com.destroystokyo.paper:paper-api:1.12-R0.1-SNAPSHOT'
 
     provided 'org.projectlombok:lombok:1.16.20'
