Init PlayerRealms. Fixed db code & various code cleanup.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,7 @@ Database:
    username: root
    password: ""
 Features:
+   RealmManager: true
    GameTipAnnouncer: true
    PlayerCompassMenu: true
    PlayerScoreboardTeams: true
