Added roll command.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,7 @@ Database:
    username: root
    password: ""
 Features:
+   Roll: true
    AnvilTest: false
    RealmManager: true
    GameTipAnnouncer: true
