Added basic build protection. Added HelpBook and fixed bugs.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,8 +5,10 @@ Database:
    username: root
    password: ""
 Features:
+   BasicBuildProtection: true
    Roll: true
-   AnvilTest: false
+   HelpBookTest: true
+   AnvilTest: true
    RealmManager: true
    GameTipAnnouncer: true
    PlayerCompassMenu: true
