--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,8 +25,7 @@ Features:
    PlayerBossBar: true
    CitizenManager: true
    WorldSettings: true
-   NewChestLoot: false
-   ChestLoot: false
+   NewChestLoot: true
    DragonEggLoot: false
    HiddenPaths: true
    MobManager: true
