Fixed small LootChest bug and improved code.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,7 +25,7 @@ Features:
    PlayerBossBar: true
    CitizenManager: true
    WorldSettings: true
-   NewChestLoot: true
+   ChestLoot: true
    DragonEggLoot: false
    HiddenPaths: true
    MobManager: true
