Added EnderEgg rewards. Fixed LootChest bug.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,7 @@ Database:
    username: root
    password: ""
 Features:
+   NewDragonEggLoot: true
    BasicBuildProtection: true
    Roll: true
    HelpBookTest: true
