Added basic item database. Additional features needed.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,7 @@ Database:
    username: root
    password: ""
 Features:
+   ItemDatabase: true
    GameWorldManager: true
    ArmorManager: true
    BasicBuildProtection: true
