Added Mining profession and other fixes.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,7 @@ Database:
    username: root
    password: ""
 Features:
+   Mining: true
    ItemDatabase: true
    GameWorldManager: true
    ArmorManager: true
