Added farming and wood cutting profession.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,8 @@ Database:
    username: root
    password: ""
 Features:
+   WoodCutting: true
+   Farming: true
    Mining: true
    ItemDatabase: true
    GameWorldManager: true
