--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,41 +1,42 @@
 Database:
-   address: 127.0.0.1
-   port: 3306
-   dbname: forgestormdb
-   username: root
-   password: ""
+  address: 127.0.0.1
+  port: 3306
+  dbname: forgestormdb
+  username: root
+  password: ""
 Features:
-   WoodCutting: true
-   Farming: true
-   Mining: true
-   ItemDatabase: true
-   GameWorldManager: true
-   ArmorManager: true
-   BasicBuildProtection: true
-   Roll: true
-   HelpBookTest: true
-   AnvilTest: true
-   RealmManager: false
-   GameTipAnnouncer: true
-   PlayerCompassMenu: true
-   ScoreboardTeams: true
-   PlayerNewChecker: true
-   PlayerOperator: true
-   PlayerBanKicker: true
-   ServerSpawn: true
-   SimpleChat: true
-   UsergroupChat: false
-   LobbyPlayer: true
-   PlayerGreeting: true
-   PlayerListText: true
-   PlayerBossBar: true
-   CitizenManager: true
-   WorldSettings: true
-   ChestLoot: true
-   DragonEggLoot: true
-   HiddenPaths: true
-   MobManager: true
-   DoubleJump: true
-   NewLantern: true
-   WorldHologram: true
-   EzImgMessage: true
+  FishingProfession: true
+  WoodCutting: true
+  Farming: true
+  Mining: true
+  ItemDatabase: true
+  GameWorldManager: true
+  ArmorManager: true
+  BasicBuildProtection: true
+  Roll: true
+  HelpBookTest: true
+  AnvilTest: true
+  RealmManager: false
+  GameTipAnnouncer: true
+  PlayerCompassMenu: true
+  ScoreboardTeams: true
+  PlayerNewChecker: true
+  PlayerOperator: true
+  PlayerBanKicker: true
+  ServerSpawn: true
+  SimpleChat: true
+  UsergroupChat: false
+  LobbyPlayer: true
+  PlayerGreeting: true
+  PlayerListText: true
+  PlayerBossBar: true
+  CitizenManager: true
+  WorldSettings: true
+  ChestLoot: true
+  DragonEggLoot: true
+  HiddenPaths: true
+  MobManager: true
+  DoubleJump: true
+  NewLantern: true
+  WorldHologram: true
+  EzImgMessage: true
