Generic code cleanup.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,7 @@ Database:
   username: root
   password: ""
 Features:
+  PersistantInventory: true
   FishingProfession: true
   WoodCutting: true
   Farming: true
