--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,20 @@ repositories {
         url 'http://repo.puha.io/nexus/content/repositories/releases/'
     }
 
+    maven {
+        url 'https://jitpack.io'
+    }
+
+    maven {
+        name 'dmulloy2-repo'
+        url 'http://repo.dmulloy2.net/content/groups/public/'
+    }
+
+    maven {
+        name 'citizensapi'
+        url 'http://repo.citizensnpcs.co/'
+    }
+
 //    maven {
 //        name 'BungeeCord'
 //        url 'https://oss.sonatype.org/content/repositories/snapshots'
@@ -120,13 +134,16 @@ dependencies {
     compile group: 'com.zaxxer', name: 'HikariCP', version: '2.3.2'
     compile group: 'io.puharesource.mc', name: 'TitleManager', version: '2.0.0'
     compile "co.aikar:acf-paper:0.5.0-SNAPSHOT"
-
     compile group: 'org.zeroturnaround', name: 'zt-zip', version: '1.11'
     compile group: 'org.apache.ant', name: 'ant-commons-net', version: '1.10.0'
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    compile group: 'com.github.koca2000', name: 'NoteBlockAPI', version: '-SNAPSHOT'
 
     compileOnly 'com.destroystokyo.paper:paper-api:1.12-R0.1-SNAPSHOT'
 
+    provided group: 'net.citizensnpcs', name: 'citizensapi', version: '2.0.23-SNAPSHOT'
+    provided group: 'com.comphenix.protocol', name: 'ProtocolLib', version: '4.3.1-SNAPSHOT'
+    provided group: 'LibsDisguises', name: 'LibsDisguises', version: '9.5.2-SNAPSHOT'
     provided 'org.projectlombok:lombok:1.18.2'
 
     provided files("src/main/Libs/Item-NBT-API.jar")
