Added PlayerBreakables feature. Bug fixes.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,6 +12,7 @@ Games:
 - SHEER_SHEEP
 #- MOW_GRASS
 Features:
+  PlayerBreakables: true
   JazzyJukebox: true
   MinigameFramework: true
   PlayMidi: true
