--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,6 +12,7 @@ Games:
 - SHEER_SHEEP
 #- MOW_GRASS
 Features:
+  DiscordMessageRelay: true
   PlayerBreakables: true
   JazzyJukebox: true
   MinigameFramework: true
